src/objects/PMF_Finca_Categoria_11_Alm_cigo__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 1, &apos;b. Bajo&apos;,&apos;a. Alto&apos;)</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Almácigo&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Establecimiento_Almacigo__c</fullName>
        <label>Plan de Establecimiento de Almácigo</label>
        <picklist>
            <picklistValues>
                <fullName>Plan de Manejo de Almácigos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene plan de almácigo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 11 - Almácigo</relationshipLabel>
        <relationshipName>PMF_Finca_Categoria_11_Alm_cigos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preparacion_adecuada_de_sustratos__c</fullName>
        <label>Preparación adecuada de sustratos</label>
        <picklist>
            <picklistValues>
                <fullName>Prepara adecuadamente los sustratos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No prepara adecuadamente los sustratos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Puntaje_Plan_Establecimiento_de_Almacigo__c</fullName>
        <formula>IF( CONTAINS(TEXT( Plan_de_Establecimiento_Almacigo__c) , &apos;Plan de Manejo de Almácigos&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Plan Establecimiento de Almácigo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Preparacion_adecuada_de_sustrato__c</fullName>
        <formula>IF( ISPICKVAL(  Preparacion_adecuada_de_sustratos__c , &apos;Prepara adecuadamente los sustratos&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Preparación adecuada de sustrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Plan_Establecimiento_de_Almacigo__c + 
Puntaje_Preparacion_adecuada_de_sustrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categoria 11 - Almácigo</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 11 - Almácigo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categoria 11 - Almácigos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>